--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,14 +95,6 @@ html {
     color: darkred;
 }
 
-/*ul {
-    padding: 10px 0;
-}
-li {
-    display: inline;
-    padding: 5px;
-}*/
-
 #attack-btn {
     font-size: 20px;
     font-weight: bold;
@@ -119,11 +111,17 @@ li {
 }
 
 #attack_stats {
+    display: table;
+    margin: 0 auto;
     color: darkgreen;
+    background: black;
 }
 
 #counter_attack_stats {
+    display: table;
+    margin: 0 auto;
     color: red;
+    background: black;
 }
 
 #reset-btn {
@@ -136,30 +134,3 @@ li {
     padding: 10px 20px;
     margin: 10px 0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-background-color:black;
-background-image:
-radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
-radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
-radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
-radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
-background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
-background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;*/
